k8s/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bluegreen-blue
  labels:
    app: bluegreen-app
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bluegreen-app
      version: blue
  template:
    metadata:
      labels:
        app: bluegreen-app
        version: blue
    spec:
      containers:
        - name: bluegreen-app
          image: 677276115158.dkr.ecr.us-east-1.amazonaws.com/bluegreen-app:blue
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
