k8s/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-service-green
  labels:
    app: bluegreen-app
spec:
  type: ClusterIP
  selector:
    app: bluegreen-app
    version: green
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
