k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-service
  labels:
    app: bluegreen-app
spec:
  type: ClusterIP
  selector:
    app: bluegreen-app
    version: blue
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
